# asic-flow

./: .gitignore  Makefile  README.md  project.toml  project.yaml  pyproject.toml
config/: ram_blocks.yaml
docs/obsidian/: 00_Python_Function_Map.md  01_Execution_Path.md  02_Module_cli.md  03_Module_config.md  04_Module_context.md  05_Module_executor.md  06_Module_registry.md  07_Module_flows_base.md  08_Module_flows_builtin.md  09_Module_project_flows_custom_power.md
flows/: core.yaml  ram.yaml
project_flows/: custom_power.py  ram_integration.py
src/asic_flow/: __init__.py  __main__.py  cli.py  config.py  context.py  executor.py  registry.py
src/asic_flow/flows/: __init__.py  base.py  builtin.py
